fixed text align on services

--- a/css/styles.css
+++ b/css/styles.css
@@ -333,7 +333,7 @@ margin: 0 auto -4em;
   #services-left h2, #services-right h2{
     text-align: center;
   }
-  #services-left p, {
+  #services-left p {
     margin-left:0px;
     text-align: left;
   }
